Work for #7033 - Fix Table of Contents and do not scroll it with a main survey content - fixed title border visibility

--- a/src/defaultV2-theme/blocks/sd-progress-toc.scss
+++ b/src/defaultV2-theme/blocks/sd-progress-toc.scss
@@ -55,3 +55,7 @@ $font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-f
     background-color: $background-dim;
   }
 }
+
+.sd-title+.sv-components-row>.sv-components-column .sv_progress-toc {
+  margin-top: 2px;
+}
